add many shadcn components
